syntax = "proto3";

package hydfs;

option go_package = "./;filetransfer";

// FileTransferService handles file data operations between nodes
service FileTransferService {
    // Core file operations that involve actual data transfer
    rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
    rpc AppendFile(AppendFileRequest) returns (AppendFileResponse);
    rpc GetFile(GetFileRequest) returns (GetFileResponse);
    
    // Streaming operations for large files (>4MB)
    rpc CreateFileStream(stream FileChunk) returns (CreateFileResponse);
    rpc AppendFileStream(stream FileChunk) returns (AppendFileResponse);
    rpc GetFileStream(GetFileRequest) returns (stream FileChunk);
    
    // File replication operations (involve data transfer between nodes)
    rpc ReplicateOperation(ReplicationRequest) returns (ReplicationResponse);
    rpc ReplicateOperationStream(stream FileChunk) returns (ReplicationResponse);
}

// Streaming chunk message for large file transfers
message FileChunk {
    oneof data {
        FileMetadata metadata = 1;  // First message contains metadata
        bytes chunk = 2;            // Subsequent messages contain file chunks
    }
}

message FileMetadata {
    string filename = 1;
    int64 client_id = 2;
    int64 operation_id = 3;
    string source_node_id = 4;
    string destination_node_id = 5;
    string owner_node_id = 6;
    int64 total_size = 7;       // Total file size for progress tracking
    string checksum = 8;        // MD5 checksum for integrity verification
    string operation_type = 9;  // "create", "append", "replicate"
}

// File operation requests and responses
message CreateFileRequest {
    string filename = 1;
    bytes data = 2;
    int64 client_id = 3;
    int64 operation_id = 4;
    string source_node_id = 5;
    string destination_node_id = 6;
    string owner_node_id = 7;
}

message CreateFileResponse {
    bool success = 1;
    string error = 2;
    int64 version = 3;
}

message AppendFileRequest {
    string filename = 1;
    bytes data = 2;
    int64 client_id = 3;
    int64 operation_id = 4;
    string source_node_id = 5;
    string destination_node_id = 6;
    string owner_node_id = 7;
}

message AppendFileResponse {
    bool success = 1;
    string error = 2;
    int64 version = 3;
}

message GetFileRequest {
    string filename = 1;
    int64 client_id = 2;
    string source_node_id = 3;
    string destination_node_id = 4;
    string owner_node_id = 5;
}

message GetFileResponse {
    bool success = 1;
    string error = 2;
    bytes data = 3;
    int64 version = 4;
}

// Replication messages
message ReplicationRequest {
    string filename = 1;
    Operation operation = 2;
    string sender_id = 3;
}

message ReplicationResponse {
    bool success = 1;
    string error = 2;
}

message Operation {
    enum Type {
        CREATE = 0;
        APPEND = 1;
        DELETE = 2;
    }
    
    Type type = 1;
    string filename = 2;
    bytes data = 3;
    int64 client_id = 4;
    int64 operation_id = 5;
    int64 timestamp = 6;
}

