syntax = "proto3";

package hydfs;
option go_package = "hydfs/proto";

// CoordinatorService handles client commands and inter-node coordination
service CoordinatorService {
    // Client operations
    rpc CreateFile(CreateFileRequest) returns (FileOperationResponse);
    rpc GetFile(GetFileRequest) returns (FileOperationResponse);
    rpc AppendFile(AppendFileRequest) returns (FileOperationResponse);
    rpc MergeFile(MergeFileRequest) returns (FileOperationResponse);
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc ListStore(ListStoreRequest) returns (ListStoreResponse);
    rpc GetFromReplica(GetFromReplicaRequest) returns (FileOperationResponse);
    rpc MultiAppend(MultiAppendRequest) returns (FileOperationResponse);
    rpc ListMemIds(ListMemIdsRequest) returns (ListMemIdsResponse);
    
    // Inter-node coordination
    rpc ReplicateFile(ReplicateFileRequest) returns (ReplicationResponse);
    rpc InitiateMerge(InitiateMergeRequest) returns (MergeResponse);
    rpc SyncReplica(SyncReplicaRequest) returns (SyncResponse);
}

// FileService handles actual file operations and data transfer
service FileService {
    rpc ReceiveFile(stream FileChunk) returns (ReceiveFileResponse);
    rpc SendFile(SendFileRequest) returns (stream FileChunk);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
    rpc GetFileInfo(FileInfoRequest) returns (FileInfoResponse);
    rpc ApplyOperation(ApplyOperationRequest) returns (ApplyOperationResponse);
}

// Request/Response messages for client operations
message CreateFileRequest {
    string local_file_name = 1;
    string hydfs_file_name = 2;
    string client_id = 3;
}

message GetFileRequest {
    string hydfs_file_name = 1;
    string local_file_name = 2;
    string client_id = 3;
}

message AppendFileRequest {
    string local_file_name = 1;
    string hydfs_file_name = 2;
    string client_id = 3;
    int32 operation_id = 4;
}

message MergeFileRequest {
    string hydfs_file_name = 1;
    string client_id = 2;
}

message ListFilesRequest {
    string hydfs_file_name = 1;
}

message ListStoreRequest {
    string node_id = 1;
}

message GetFromReplicaRequest {
    string vm_address = 1;
    string hydfs_file_name = 2;
    string local_file_name = 3;
}

message MultiAppendRequest {
    string hydfs_file_name = 1;
    repeated string vm_addresses = 2;
    repeated string local_file_names = 3;
    string client_id = 4;
}

message ListMemIdsRequest {}

// Response messages
message FileOperationResponse {
    bool success = 1;
    string message = 2;
    int32 error_code = 3;
    repeated string replica_nodes = 4;
}

message ListFilesResponse {
    repeated FileLocation file_locations = 1;
    string file_id = 2;
}

message ListStoreResponse {
    repeated StoredFile stored_files = 1;
    string node_ring_id = 2;
}

message ListMemIdsResponse {
    repeated MemberNode members = 1;
}

// Inter-node operation messages
message ReplicateFileRequest {
    string file_name = 1;
    string source_node = 2;
    repeated string target_nodes = 3;
    int32 operation_id = 4;
    OperationType operation_type = 5;
}

message InitiateMergeRequest {
    string file_name = 1;
    repeated string replica_nodes = 2;
}

message SyncReplicaRequest {
    string file_name = 1;
    string source_node = 2;
    string target_node = 3;
}

message ReplicationResponse {
    bool success = 1;
    string message = 2;
    repeated string completed_replicas = 3;
}

message MergeResponse {
    bool success = 1;
    string message = 2;
    string canonical_hash = 3;
}

message SyncResponse {
    bool success = 1;
    string message = 2;
}

// File transfer messages
message FileChunk {
    string file_name = 1;
    bytes data = 2;
    int64 offset = 3;
    int64 total_size = 4;
    bool is_last_chunk = 5;
    int32 operation_id = 6;
}

message SendFileRequest {
    string file_name = 1;
    string requesting_node = 2;
}

message ReceiveFileResponse {
    bool success = 1;
    string message = 2;
    string file_hash = 3;
}

message DeleteFileRequest {
    string file_name = 1;
}

message DeleteFileResponse {
    bool success = 1;
    string message = 2;
}

message FileInfoRequest {
    string file_name = 1;
}

message FileInfoResponse {
    bool exists = 1;
    string hash = 2;
    int64 size = 3;
    int64 last_modified = 4;
}

message ApplyOperationRequest {
    int32 operation_id = 1;
    OperationType operation_type = 2;
    string file_name = 3;
    bytes data = 4;
    string client_id = 5;
}

message ApplyOperationResponse {
    bool success = 1;
    string message = 2;
}

// Helper messages
message FileLocation {
    string vm_address = 1;
    string ring_id = 2;
}

message StoredFile {
    string file_name = 1;
    string file_id = 2;
}

message MemberNode {
    string node_id = 1;
    string ring_id = 2;
    string state = 3;
    int32 incarnation = 4;
}

// Enums
enum OperationType {
    CREATE = 0;
    APPEND = 1;
    GET = 2;
    MERGE = 3;
}